[project]
name = "eraktkosh-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.1",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "thefuzz>=0.22.1",
]
